[metadata]
name = LPV
version = 0.1
author = Xp-op
author_email = muhammad184276@gmail.com
description = Fast Parser Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xp-op/LPV
project_urls =
    Bug Tracker = https://github.com/Xp-op/LPV/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src